<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemlist"
    android:layout_width="match_parent"
    android:layout_height="70dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/list_item"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:contextClickable="true"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/list_item"
            android:textSize="25sp" />


        <Button
            android:id="@+id/item_edit_btn"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/item_del_btn"
            android:text="@string/edit_btn_txt" />

        <Button
            android:id="@+id/item_del_btn"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/del_btn_txt" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_item">

            <TextView
                android:id="@+id/date_lbl"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/date_lbl_txt" />

            <TextView
                android:id="@+id/eat_date"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/date_lbl"
                android:text="@string/date_fmt" />

            <TextView
                android:id="@+id/time_lbl"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/eat_date"
                android:text="@string/time_lbl_txt"/>

            <TextView
                android:id="@+id/eat_time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/time_lbl"
                android:text="@string/time_fmt"/>




        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>