<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_food_txt"
            android:textAlignment="center"
            android:textSize="26dp"
            android:background="@color/colorPrimary"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/food_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingRight="10dp"
                    android:text="@string/food_lbl_txt" />

                <EditText
                    android:id="@+id/food_name_input"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/food_lbl" />


            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/meas_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meas_type"/>

                <Spinner
                    android:id="@+id/meas_type_spin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">


                </Spinner>

                <TextView
                    android:id="@+id/cals_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingRight="10dp"
                    android:text="@string/calories" />

                <EditText
                    android:id="@+id/cals_input"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/cals_lbl"
                    android:paddingRight="10dp"/>


            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/nutrition_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">


                <TextView
                    android:id="@+id/carbs_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/carbs" />

                <EditText
                    android:id="@+id/carbs_input"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/cals_lbl"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/pro_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/protein" />

                <EditText
                    android:id="@+id/pro_input"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/cals_lbl" />


                <TextView
                    android:id="@+id/fats_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingRight="10dp"
                    android:text="@string/fats"
                    android:layout_marginLeft="10dp"/>

                <EditText
                    android:id="@+id/fats_input"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/fats_lbl"/>


            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <Button
                    android:id="@+id/add_food_btn"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_btn_txt"/>

                <Button
                    android:id="@+id/cancel_food_btn"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_btn_txt"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>